Added sendGrid, express-validator,  some CSS clean ups

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -4,6 +4,9 @@
             <li class="nav-item">
                 <a href="/" class="nav-link current-page" id="home">Home</a>
             </li>
+            <li class="nav-item">
+                <a href="/contact" class="nav-link">Contact</a>
+            </li>
         </ul>
         <ul class="nav-menu">
             <% if(!currentUser) { %>
