--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -22,7 +22,7 @@
                     </h3>
                 </div>
                 <div>
-                    <input class="login-input" type="text" id="username" name="username" required autofocus>
+                    <input type="text" id="username" name="username" required autofocus>
                 </div>
             </div>
             <div>
@@ -32,7 +32,7 @@
                     </h3>
                 </div>
                 <div>
-                    <input class="login-input" type="password" name="password" id="password" pattern=".{6,}"
+                    <input type="password" name="password" id="password" pattern=".{6,}"
                         title="At least 6 characters long" required>
                 </div>
             </div>
