--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -14,6 +14,7 @@
     <%- include('../partials/navbar.ejs') %>
     <%- include('../partials/flash.ejs') %>
     <main>
+        <% if(!currentUser) { %>
         <form action="/register" method="POST" class="login-form">
             <div>
                 <div>
@@ -23,6 +24,16 @@
                 </div>
                 <div>
                     <input type="text" id="username" name="username" required autofocus>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <h3>
+                        <label for="email">Email</label>
+                    </h3>
+                </div>
+                <div>
+                    <input type="email" name="email" id="email" required>
                 </div>
             </div>
             <div>
@@ -40,6 +51,9 @@
                 <button class="button" type="submit" value="Submit">Register</button>
             </div>
         </form>
+        <% } else { %>
+        <p class="main-p">You are already registered.</p>
+        <% } %>
     </main>
     <script src="/javascripts/main.js"></script>
 </body>
