--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,69 @@
     <%- include('./partials/navbar.ejs') %>
     <%- include('./partials/flash.ejs') %>
     <main class="homepage">
-        <h1>Homepage Under Construction</h1>
+        <div class="section-1">
+            <img class="imgBG-home"
+                src="https://res.cloudinary.com/dmdbza74n/image/upload/v1681755285/training%20app/victor-freitas-vjkM-0m34KU-unsplash_cjlnkj.webp">
+            <div class="title">
+                <h1 class="h1-home"><span class="font-3">Log</span> your training,<br><span class="font-3">Track</span>
+                    your
+                    progress</h1>
+                <div class="link-home margin-2">
+                    <a href="/register" class="register-home">Register</a>
+                </div>
+            </div>
+        </div>
+        <div class="section-2">
+            <div>
+                <h2 class="h2-home-black">Start Logging</h2>
+                <p class="p-home-black">Your training plan.</p>
+                <p class="p-home-black">A new goal.</p>
+            </div>
+            <div>
+                <img class="img-home"
+                    src="https://res.cloudinary.com/dmdbza74n/image/upload/v1681755281/training%20app/logs_ah9o6f.webp">
+            </div>
+        </div>
+        <div class="section-3">
+            <div>
+                <img class="img-home"
+                    src="https://res.cloudinary.com/dmdbza74n/image/upload/v1681755282/training%20app/exercises_j9o1sv.webp">
+            </div>
+            <div>
+                <h2 class="h2-home-white">Name your exercises</h2>
+                <p class="p-home-white">No premade lists.</p>
+                <p class="p-home-white">Set your custom labels.</p>
+            </div>
+        </div>
+        <div class="section-4">
+            <div class="div-s-4a">
+                <img class="img-home-padding"
+                    src="https://res.cloudinary.com/dmdbza74n/image/upload/v1681755282/training%20app/session_s2h5xi.webp">
+            </div>
+            <div>
+                <h2 class="h2-home-black">Track your progress</h2>
+                <p class="p-home-black">Add your sessions.</p>
+                <p class="p-home-black">Visualize your progress.</p>
+            </div>
+            <div class="div-s-4b">
+                <img class="img-home-padding"
+                    src="https://res.cloudinary.com/dmdbza74n/image/upload/v1681755282/training%20app/sessions_cwjmun.webp">
+            </div>
+        </div>
+        <div class="section-5">
+            <div class="div-s-5a">
+                <p class="p-home-white">The project is still in the early stages, and new features and metrics will be
+                    added over time.</p>
+            </div>
+            <div class="div-s-5b">
+                <div>
+                    <h2 class="h2-home-black">Request a feature</h2>
+                </div>
+                <div class="link-home margin-2">
+                    <a href="/contact" class="contact-home">Contact</a>
+                </div>
+            </div>
+        </div>
     </main>
     <script src="/javascripts/main.js"></script>
 </body>
