--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -39,6 +39,9 @@
             <div class="margin-1">
                 <button class="button" type="submit" value="Submit">Login</button>
             </div>
+            <div class="margin-2">
+                <a href="/forgot" class="link">Forgot My Password</a>
+            </div>
         </form>
         <% } else { %>
         <p class="main-p">You are already logged in.</p>
