Changed session schema to trsession

--- a/views/trsessions/new.ejs
+++ b/views/trsessions/new.ejs
@@ -18,7 +18,7 @@
             <h1>Start a new session</h1>
         </div>
         <div class="form-container">
-            <form action="/logs/<%= log.slugLog %>/exercises/<%= exercise.slugExercise %>/sessions" method="POST">
+            <form action="/logs/<%= log.slugLog %>/exercises/<%= exercise.slugExercise %>/trsessions" method="POST">
                 <div class="form-contents">
                     <label for="createdDate">Date:</label>
                     <input type="date" id="createdDate" name="createdDate" required>
