--- a/views/exercises/show.ejs
+++ b/views/exercises/show.ejs
@@ -58,7 +58,7 @@
                 <h2>Sessions</h2>
             </div>
             <div class="link-container">
-                <a href="/logs/<%= log.slugLog %>/exercises/<%= exercise.slugExercise %>/sessions/new"
+                <a href="/logs/<%= log.slugLog %>/exercises/<%= exercise.slugExercise %>/trsessions/new"
                     title="Create New">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" id="cross-h2">
                         <path d="M40 40h24V25H40V0H25v25H0v15h25v24h15z" />
@@ -67,17 +67,17 @@
             </div>
         </div>
 
-        <%- include('../partials/paginateSessions') %>
+        <%- include('../partials/paginateTrsessions') %>
 
         <div class="flex-row-table">
             <% for (let exerciseItem of exerciseAggregate){%>
-            <% if(currentUser && exerciseItem.sessions.author.equals(currentUser._id)) { %>
+            <% if(currentUser && exerciseItem.trsessions.author.equals(currentUser._id)) { %>
             <a class="table-a table-container"
-                href="/logs/<%= log.slugLog %>/exercises/<%= exercise.slugExercise %>/sessions/<%= exerciseItem.sessions.slugSession %>">
+                href="/logs/<%= log.slugLog %>/exercises/<%= exercise.slugExercise %>/trsessions/<%= exerciseItem.trsessions.slugSession %>">
                 <table>
                     <tr>
                         <th colspan="4" scope="col">
-                            <%= exerciseItem.sessions.createdDate.toLocaleDateString() %>
+                            <%= exerciseItem.trsessions.createdDate.toLocaleDateString() %>
                         </th>
                     </tr>
                     <tr>
@@ -85,8 +85,8 @@
                             Total Volume
                         </td>
                         <th colspan="1" scope="col" class="totalVolume"
-                            data-totalvolume='<%= exerciseItem.sessions.totalVolume %>'>
-                            <%= exerciseItem.sessions.totalVolume %>
+                            data-totalvolume='<%= exerciseItem.trsessions.totalVolume %>'>
+                            <%= exerciseItem.trsessions.totalVolume %>
                         </th>
                     </tr>
                     <tr>
@@ -106,7 +106,7 @@
                             volume
                         </td>
                     </tr>
-                    <% for (let [index, set] of exerciseItem.sessions.weights.entries()){%>
+                    <% for (let [index, set] of exerciseItem.trsessions.weights.entries()){%>
                     <tr>
                         <td><%= index + 1 %></td>
                         <th><%= set.repetitions %></th>
