--- a/views/trsessions/edit.ejs
+++ b/views/trsessions/edit.ejs
@@ -19,14 +19,14 @@
         </div>
         <div class="form-container">
             <form
-                action="/logs/<%= log.slugLog %>/exercises/<%= exercise.slugExercise %>/sessions/<%= session.slugSession %>?_method=PUT"
+                action="/logs/<%= log.slugLog %>/exercises/<%= exercise.slugExercise %>/trsessions/<%= trsession.slugSession %>?_method=PUT"
                 method="POST">
                 <div class="form-contents">
                     <div>
                         <label for="createdDate">Date:</label>
                         <input type="date" id="createdDate" name="createdDate">
                     </div>
-                    <% for(let [i,set] of session.weights.entries()){%>
+                    <% for(let [i,set] of trsession.weights.entries()){%>
                     <div>
                         <h3>
                             Set <%=[i + 1] %>
@@ -49,7 +49,7 @@
                 <div class="flex-row margin-1">
                     <div class="link-container">
                         <a class="link"
-                            href="/logs/<%= log.slugLog %>/exercises/<%= exercise.slugExercise %>/sessions/<%= session.slugSession %>">Cancel</a>
+                            href="/logs/<%= log.slugLog %>/exercises/<%= exercise.slugExercise %>/trsessions/<%= trsession.slugSession %>">Cancel</a>
                     </div>
                     <div class="link-container">
                         <button class="button">Update Session</button>
