--- a/views/reset.ejs
+++ b/views/reset.ejs
@@ -28,11 +28,11 @@
             <div>
                 <div>
                     <h3>
-                        <label for="password">Confirm Password</label>
+                        <label for="confirm">Confirm Password</label>
                     </h3>
                 </div>
                 <div>
-                    <input type="password" name="Confirm" id="password" required>
+                    <input type="password" name="confirm" id="password" required>
                 </div>
             </div>
             <div class="margin-1">
