--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/stylesheets/main.css">
     <link rel="stylesheet" href="/stylesheets/flash.css">
-    <title>Contact</title>
+    <title>Contact Page</title>
 </head>
 
 <body>
