--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,9 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Workout tracker is a web app where you can log your training and track your progress." />
+    <meta property="og:description"
+        content="Workout tracker is a web app where you can log your training and track your progress." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.workouttrackr.com/" />
+    <meta property="og:image"
+        content="https://res.cloudinary.com/dmdbza74n/image/upload/v1690481966/training%20app/workouttrackr-h_rbls2r.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="900" />
+    <meta property="og:image:height" content="365" />
     <link rel="stylesheet" href="/stylesheets/flash.css">
     <link rel="stylesheet" href="/stylesheets/main.css">
-    <title>Home</title>
+    <title>Workout Tracker | www.workouttrackr.com</title>
 </head>
 
 <body>
