--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YWTG3KCFQV"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-YWTG3KCFQV');
+    </script>
     <meta name="google-site-verification" content="FNOfVgaXSPIX8rUXkVPToYbsBweahuubVoje7EwJ19s" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
