--- a/views/exercises/new.ejs
+++ b/views/exercises/new.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/stylesheets/main.css">
-    <title>Create new Exercise</title>
+    <title>Add a new Exercise</title>
 </head>
 
 <body>
@@ -15,7 +15,10 @@
 
     <main>
         <div class="h1-container margin-1">
-            <h1>Add a new Exercise</h1>
+            <h1><%=log.title%></h1>
+        </div>
+        <div class="h2-container margin-1">
+            <h2>Add a new Exercise</h2>
         </div>
         <div class="p-container">
             <p class="main-p">Enter the name of your new exercise.</p>
