--- a/views/trsessions/edit.ejs
+++ b/views/trsessions/edit.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/stylesheets/main.css">
-    <title>Edit Session</title>
+    <title>Edit <%= trsession.slugSession %></title>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
 
     <main>
         <div class="h1-container margin-1">
-            <h1>Edit Session</h1>
+            <h1>Edit Session <%= trsession.slugSession %></h1>
         </div>
         <div class="form-container">
             <form
@@ -26,25 +26,35 @@
                         <label for="createdDate">Date:</label>
                         <input type="date" id="createdDate" name="createdDate">
                     </div>
-                    <% for(let [i,set] of trsession.weights.entries()){%>
-                    <div>
-                        <h3>
-                            Set <%=[i + 1] %>
-                        </h3>
-                    </div>
-                    <div class="flex-row">
-                        <div>
-                            <label for="repetitions">Reps:</label>
-                            <input type="number" id="repetitions" name="weights[<%= [i] %>][repetitions]"
-                                value="<%= set.repetitions %>">
+                    <div id="div-set">
+                        <% for(let [i,set] of trsession.weights.entries()){%>
+                        <div class="sets">
+                            <h3 class="margin-1">
+                                Set <%=[i + 1] %>
+                            </h3>
+                            <div class="form-contents margin-1">
+                                <div>
+                                    <label for="repetitions">Repetitions</label>
+                                    <input type="number" id="repetitions" name="weights[<%= [i] %>][repetitions]"
+                                        value="<%= set.repetitions %>">
+                                </div>
+                                <div>
+                                    <label for="kilograms">Kilograms</label>
+                                    <input type="number" id="kilograms" name="weights[<%= [i] %>][kilograms]"
+                                        value="<%= set.kilograms %>">
+                                </div>
+                            </div>
                         </div>
-                        <div>
-                            <label for="kilograms">kgs:</label>
-                            <input type="number" id="kilograms" name="weights[<%= [i] %>][kilograms]"
-                                value="<%= set.kilograms %>">
-                        </div>
+                        <% } %>
                     </div>
-                    <% } %>
+                </div>
+                <div class="flex-row margin-1">
+                    <div class="link-container">
+                        <button class="link" type="button" id="delete-set">Delete Set</button>
+                    </div>
+                    <div class="link-container">
+                        <button class="link" type="button" id="add-set">Add Set</button>
+                    </div>
                 </div>
                 <div class="flex-row margin-1">
                     <div class="link-container">
@@ -59,6 +69,7 @@
         </div>
     </main>
     <script src="/javascripts/defaultDate.js"></script>
+    <script src="/javascripts/trsessionsEdit.js"></script>
 </body>
 
 </html>
