--- a/views/trsessions/new.ejs
+++ b/views/trsessions/new.ejs
@@ -17,6 +17,7 @@
         <section class="flex-row">
             <div>
                 <% if (showPrevious) { %>
+                <% for (let item of showPrevious){%>
                 <div class="h2-container">
                     <h2>Previous session</h>
                 </div>
@@ -28,17 +29,17 @@
                                     &nbsp;
                                 </td>
                                 <td>
-                                    reps
+                                    repetitions
                                 </td>
                                 <td>
-                                    kgs
+                                    kilograms
                                 </td>
                                 <td>
                                     volume
                                 </td>
                             </tr>
 
-                            <% for (let [index, set] of showPrevious.weights.entries()){%>
+                            <% for (let [index, set] of item.trsessions.weights.entries()){%>
                             <tr>
                                 <td scope="row">Set <%=index + 1%></td>
                                 <th><%=set.repetitions%></th>
@@ -49,6 +50,7 @@
                         </table>
                     </a>
                 </div>
+                <% } %>
                 <% } %>
             </div>
             <div>
@@ -68,15 +70,15 @@
                             </div>
                             <div id="div-set">
                                 <div>
-                                    <h3 class="margin-1">Set 1</h3>
+                                    <h3 class="margin-1 h3-trsessions-form">Set 1</h3>
                                     <div class="form-contents margin-1">
                                         <div>
-                                            <label for="repetitions">Repetitions</label>
+                                            <label class="label-trsessions-form" for="repetitions">Repetitions</label>
                                             <input type="number" step="0.01" min="0" id="repetitions"
                                                 name="weights[0][repetitions]" required autofocus>
                                         </div>
                                         <div>
-                                            <label for="kilograms">Kilograms</label>
+                                            <label class="label-trsessions-form" for="kilograms">Kilograms</label>
                                             <input type="number" step="0.01" min="0" id="kilograms"
                                                 name="weights[0][kilograms]" required>
                                         </div>
