--- a/views/trsessions/show.ejs
+++ b/views/trsessions/show.ejs
@@ -57,7 +57,7 @@
         <hr />
         <div class="flex-row margin-2">
             <div class="h2-container">
-                <h2>Current Session</h2>
+                <h2><%= exercise.title %></h2>
             </div>
         </div>
         <div class="flex-row-table">
