--- a/views/trsessions/show.ejs
+++ b/views/trsessions/show.ejs
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/stylesheets/flash.css">
     <link rel="stylesheet" href="/stylesheets/main.css">
-    <title><%= trsession.slugSession %></title>
+    <title><%= exercise.slugExercise %> | <%= trsession.slugSession %></title>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
         </div>
         <div class="flex-row">
             <div class="h1-container">
-                <h1><%= trsession.createdDate.toLocaleDateString() %></h1>
+                <h1><%= trsession.createdDateRen.toLocaleDateString() %></h1>
             </div>
             <% if(currentUser && trsession.author.equals(currentUser._id)) { %>
             <div class="link-container">
@@ -63,6 +63,14 @@
         <div class="flex-row-table">
             <a class="table-a table-container">
                 <table>
+                    <tr>
+                        <td colspan="3" scope="col">
+                            Total Volume
+                        </td>
+                        <th colspan="1" scope="col">
+                            <%= trsession.totalVolume %>
+                        </th>
+                    </tr>
                     <tr>
                         <td>
                             &nbsp;
