--- a/views/exercises/show.ejs
+++ b/views/exercises/show.ejs
@@ -80,7 +80,7 @@
                             <% if (exerciseItem.trsessions.createdDateRen) { %>
                             <%= exerciseItem.trsessions.createdDateRen.toLocaleDateString() %>
                             <% } else { %>
-                            <%= exerciseItem.trsessions.createdDate %>
+                            <%= exerciseItem.trsessions.createdDate.toLocaleDateString() %>
                             <% } %>
                         </th>
                     </tr>
