--- a/views/exercises/show.ejs
+++ b/views/exercises/show.ejs
@@ -77,7 +77,11 @@
                 <table>
                     <tr>
                         <th colspan="4" scope="col">
+                            <% if (exerciseItem.trsessions.createdDateRen) { %>
+                            <%= exerciseItem.trsessions.createdDateRen.toLocaleDateString() %>
+                            <% } else { %>
                             <%= exerciseItem.trsessions.createdDate.toLocaleDateString() %>
+                            <% } %>
                         </th>
                     </tr>
                     <tr>
