--- a/views/trsessions/edit.ejs
+++ b/views/trsessions/edit.ejs
@@ -35,14 +35,14 @@
                             <div class="form-contents margin-1">
                                 <div>
                                     <label class="label-trsessions-form" for="repetitions">Repetitions</label>
-                                    <input type="number" id="repetitions" name="weights[<%= [i] %>][repetitions]"
-                                        value="<%= set.repetitions %>">
+                                    <input step="0.01" type="number" id="repetitions"
+                                        name="weights[<%= [i] %>][repetitions]" value="<%= set.repetitions %>">
                                 </div>
                                 <div>
                                     <label class="label-trsessions-form"
                                         for="kilograms .label-trsessions-form">Kilograms</label>
-                                    <input type="number" id="kilograms" name="weights[<%= [i] %>][kilograms]"
-                                        value="<%= set.kilograms %>">
+                                    <input step="0.01" type="number" id="kilograms"
+                                        name="weights[<%= [i] %>][kilograms]" value="<%= set.kilograms %>">
                                 </div>
                             </div>
                         </div>
